Add maintenanceTasks CRUD
